--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@vercel/postgres": "^0.10.0",
+    "bcrypt": "^5.1.1",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.22",
+    "oidc-token-hash": "^5.0.3",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
