--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.9.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "next": "14.2.5",
