--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.22",
     "oidc-token-hash": "^5.0.3",
