--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@vercel/postgres": "^0.10.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "next": "14.2.5",
-    "next-auth": "^5.0.0-beta.22",
+    "next-auth": "^5.0.0-beta.25",
     "oidc-token-hash": "^5.0.3",
     "pg": "^8.13.0",
     "react": "^18",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
